# researchpapers

./: .gitignore  CMakeLists.txt  README.md
code/: CMakeLists.txt
code/BTree/: btree.h
code/MakingDataStructuresPersistent/: fatnode.h  fatnode_f.h  nodecopying.h
code/RTree/: rtree.h
code/SSTree/: sstree.c  sstree.h
other/: btree.md  rtree.md  sstree.md
papers/: makingdatastructurespersitent.md
tests/: CMakeLists.txt
tests/BTree/: btreetest.c
tests/MakingDataStructuresPersistentTest/: fatnodetest.c
tests/RTree/: rtreetest.c
